# ChangeLog for app-emulation/docker
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.39 2015/02/19 00:43:30 patrick Exp $

  19 Feb 2015; Patrick Lauer <patrick@gentoo.org> -docker-1.3.3-r1.ebuild,
  -docker-1.4.1.ebuild:
  Remove old versions with unsatisfiable dependencies

  15 Feb 2015; Patrick Lauer <patrick@gentoo.org> docker-1.3.3-r1.ebuild,
  docker-1.4.1.ebuild, docker-1.5.0.ebuild:
  Make kernel checks nonfatal to allow building (binpkgs etc.)

*docker-1.5.0 (11 Feb 2015)

  11 Feb 2015; Kacper Kowalik <xarthisius@gentoo.org> +docker-1.5.0.ebuild:
  Version bump, grabbed from tianon's docker overlay

*docker-1.4.1 (23 Dec 2014)

  23 Dec 2014; Kacper Kowalik <xarthisius@gentoo.org> +docker-1.4.1.ebuild,
  -docker-1.4.0.ebuild:
  Version bump, drop old

*docker-1.3.3-r1 (16 Dec 2014)

  16 Dec 2014; Alex Brandt <alunduil@gentoo.org> +docker-1.3.3-r1.ebuild:
  add version 1.3.3-r1 from tianon's docker overlay

  Version 1.4.0 of docker has a nasty bug when using volumes that are bind
  mounts.  Thus, I've added 1.3.3-r1 until 1.4.1 is released and fixes this
  issue, or longer that's OK too.

*docker-1.4.0 (12 Dec 2014)

  12 Dec 2014; Kacper Kowalik <xarthisius@gentoo.org> +docker-1.4.0.ebuild,
  -docker-1.3.2.ebuild:
  Version bump, drop vulnerable versions wrt #532344

  26 Nov 2014; Kacper Kowalik <xarthisius@gentoo.org> docker-1.3.2.ebuild:
  Update with ebuild from Tianon's overlay

  26 Nov 2014; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Add myself as co-maintainer

*docker-1.3.2 (26 Nov 2014)

  26 Nov 2014; Kacper Kowalik <xarthisius@gentoo.org> +docker-1.3.2.ebuild,
  -docker-1.3.1.ebuild:
  Version bump, drop old wrt bug #530518

  19 Nov 2014; Yixun Lan <dlan@gentoo.org> -docker-1.0.0.ebuild,
  -docker-1.0.1.ebuild, -docker-1.1.0.ebuild, -docker-1.2.0.ebuild:
  clean vulnerable versions due to security bug 529670, proxy for maintainer
