@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX docker-r2.confd 581 SHA256 94e1c07b09701f3b0b1c4f6f917206da3b32f8d7e961c3850c4391ebd59df0b4 SHA512 5838270ff9ce7b9a562b2449ba5f4ad72db956dd03f6a1b006c8019ff43fea1c4ae1e2a4818fb092b6096cff6bd9ce539b05b7940412c55b3bb3e30c356da944 WHIRLPOOL a8e3759b6c86855afa7e784d50a7926fc888d50ec03dc2d9dcd70c3f2dd11caf6670196d91f383cab1d603f32a968bed4b3a0668ec1a38d41dc1142ec92235cc
 AUX docker-r2.initd 1767 SHA256 0cb83137cf3d37aadf450dd30ec9e0ceca3d865867f7fe64a43a1d5f42d2ecf8 SHA512 1250f8b16ded27877cf2759fca1d69f37ce308d4d5e5a29438210e847894617fa088260b0cfd87e1ee65ed26a4293d98c79462c1ccc93aac14203fbfed4b69a2 WHIRLPOOL 272f04feb587a0f91079f41ad90868f99c28a21a5ec35876f38dbbd342a53796dd4ec822fa2cd3506f22485b6a0147d24da2e7ab89da7875f84e3e9fab50c3c8
 AUX docker.service 249 SHA256 ddf23c8bd07303a87f7e76881b14c023c54835feba575998d6f5a9a7ec8a0a0a SHA512 d7564489486b3547cb79057fa44cb3eb0aa6c50ec47eca12579748170d62ab435395d173fdf39fcec8e86f4778db7413b7fa0ab85dbbd2fc1636164d4aad8b37 WHIRLPOOL 553f8a93a5d7cb6cc037a2004e19efa06520eba363e12574a5d251d10b23d9f24d1a023eb9915968a9bb661bddb577163948fb180a85ca9c916cac5c6680b1df
 DIST docker-1.5.0.tar.gz 6459415 SHA256 cf97a1b3a75a63d3b7cb743b5376a1b1bc00eac651dce9e3f094202901a43c48 SHA512 cc620570c67454bedfae73de86b722a845fce4b0bd46446d1190ae98917010db54fbf82951167ebf62358e53dedb45fff2a7f25014c79b42efc2a5f2b611b4d9 WHIRLPOOL acb62b6c1b354212cf250b60227c5dbedc7fe6c6e729fc887653b776a991cd13650c643e20abf06a4326412cb10a1b4e2a20bac0a1fbc056b8d2cf2d54d1fcd0
-EBUILD docker-1.5.0.ebuild 6694 SHA256 c6a77e9ff7f0b2673ac6e902269b0263c39287c254e953d4ef8df317a2a7e445 SHA512 bc188cc36e2a99a8e5d4c4224200ed6edd30a544554ed5c1e7397f07d98baafb013c7f42b30ab3f01126ae315781ddab5d1786d57501e56d7ef4ce81dcab27ad WHIRLPOOL b93e84562ba2ff1a410292a898c0dcb768793cb4678be34e4fd772146fd1d3deed2eac9d100058667adaf266f57508262ce84b0b3189a83c5065d3cd1a5e4581
-MISC ChangeLog 6336 SHA256 5cd625227f5e2145234c40b190a51532c653e6abc57b555be74dd91c16d14e94 SHA512 6d3f8ff456a2139d1649e53e56bb9068afacb28dbbfd37930fe3e00751718f81e441067606c7be8930d4803efd061a448f4c5cc19af1882a491cc2f954bcda91 WHIRLPOOL ae2356452974241dc9530c3dc8b834ee357d104ad1397c73f1ac93370468de4179b44e16f104763e7468182189aabaf9fe967f17cdf7183794c9b828c94351eb
-MISC metadata.xml 1277 SHA256 e5d0394aa0f0ba5f133ccbbfe92c28111a5ad888d46a53ade9625ef0155c7d9b SHA512 f910edcabda2011dd1ca107848663c97a17fbb0f84391376abd5e26111662e8bb172c9d0b77a57b82fc5b35181a543a8f869823d0ae7b9d3deaaa75c18d03f10 WHIRLPOOL cbfeb224f2205c91fa288d18086dce87d61d25481f0c10e09a8b77e9950162d647fa8c3cd7793c2fad19c3c2a0be55fad29a9002eeacf02a6a10a48d68e846c5
+EBUILD docker-1.5.0.ebuild 6814 SHA256 bb5aae2db67a8e9b7ad1edbcbb2e0b4b2190ca8b2bbeab9f68b6923137ca1dcc SHA512 6ff82386222ad2df9fc627e74432b0c154cacedbc7c41c371ff92bf6b91a63dfde0eb3f4b79c7c728b86db24472c1b50be06eda88ed9e759d85387501a092d55 WHIRLPOOL 71af45b75bfa4f7674d9acb7667dd9803df21a1bc72a261bb20fd0b922d0a73df8837cc802ccb3d6217466490b7a04b2893252c16a816f98ddb3bd44e2e3fa47
+MISC ChangeLog 6534 SHA256 e7c240f846c7eab7dacae7129610b14bb594e838eef5ddd00bd22c9f26f4c972 SHA512 5d64534e96973d4986d26ad5c6e2bd7196441d51246fb95208e0a58d2153f525ff11ce6a9c377e955cea0458e95dcdbb9d629bbc9708f1347dca833b6d1ea813 WHIRLPOOL 3a10eecca331d0f613f85bdc9c8137923bc9c0d3fb6cfd5f12151e69873b97d99858a4d23e367d3de2c47c8c7396822c86ce30cb8fd9ba17a479e71cc2f4f647
+MISC metadata.xml 1404 SHA256 47b10fac828cc7c80f752c786452104d924bee553c0e6f95e8de5de585ef832d SHA512 e88b6183842f53cec880671f2c9785b1690917f4214f13f521747cc968f6be9cad0a5b09ca36705b69a168b8c4db4271f754c345f4042f5baccbd249e80eaed1 WHIRLPOOL 8c9dc0c496e788fed2fcffb826cbadbd8d4646fcfff5e807dc0946b360b15a833fbdb4d2bf45cd54e771d783ddd747f4ded575ee2e3e99998da774505e39e596
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJU9cNzAAoJEF0huFKJUZL5nnsP/0V55iVY8dN3i80WPWUTNPJx
+Bk+OjbWqdvwrO3RWzDVXIDh8PF8K6XhewIEm1pJcbtk5aMkRvtWqLRyLYvovEb+h
+krSIJEF2w6HD3zgBuBMEu+oe85TV0Eaz/CtW0UJKkuGLZgzu93rVUkKcXx0Wzzzx
+2E/cqqvkgyu3qwOwCPbfXxLSHu/6kbZJG7QHI9o1jydmwiBfkCVkcb5+Bm+7iDhw
+hboiL1xPao4WInAsSOAZ6X5TqdKjkMS6oPiIv7+S44DEFyvp+dB4MbklfoWW41iU
+PA4plKCUhIh9hkORwCG+vzEatILjm4cFfAIkKS9/42JL+c67eec/NOAoqB/U3pbo
+sD+7aJbSXgFWWrUnFh3QrTqKg5b0DbOUNjVyucBC8NkmBwFIwTKLzVjzelCF4gLo
+0Ys9oP7Ec5lYS+De2D19DFeQHigeqK7n25v0a15KS5Tmnx8Vymy8x73P5+S6sjSh
+vvUIM+H4lzbrHMMMDLsHftbmWo4agpN2NV9d9AalBsMzgrzpbkDHlKS6KvWPgozB
+ZTvVwtgbQJ7WLn83kQzbc68SbMzOROtMCxYDAXdXWA0R3hvPqPV9U1vKDbATIkhO
+UZ8aClOVm80ch0pHeacn2vCx2tCZ+7xkuYqXfkK/rZph8mufJfNzM8VtZkTG0U6l
+eAV7xjeBPV7kU7EJC6si
+=iZ62
+-----END PGP SIGNATURE-----
