@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/docker-1.5.0.ebuild,v 1.2 2015/02/15 02:08:25 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/docker-1.5.0.ebuild,v 1.3 2015/03/03 14:21:35 xarthisius Exp $
 
 EAPI=5
 
@@ -27,7 +27,7 @@ inherit bash-completion-r1 linux-info multilib systemd udev user
 
 LICENSE="Apache-2.0"
 SLOT="0"
-IUSE="aufs btrfs +contrib +device-mapper doc lxc vim-syntax zsh-completion"
+IUSE="aufs btrfs +contrib +device-mapper doc lxc overlay vim-syntax zsh-completion"
 
 # https://github.com/docker/docker/blob/master/hack/PACKAGERS.md#build-dependencies
 CDEPEND="
@@ -132,6 +132,12 @@ pkg_setup() {
 		"
 	fi
 
+	if use overlay; then
+		CONFIG_CHECK+="
+			~OVERLAY_FS ~EXT4_FS_SECURITY ~EXT4_FS_POSIX_ACL
+		"
+	fi
+
 	linux-info_pkg_setup
 }
 
@@ -163,7 +169,7 @@ src_compile() {
 
 	# let's set up some optional features :)
 	export DOCKER_BUILDTAGS=''
-	for gd in aufs btrfs device-mapper; do
+	for gd in aufs btrfs device-mapper overlay; do
 		if ! use $gd; then
 			DOCKER_BUILDTAGS+=" exclude_graphdriver_${gd//-/}"
 		fi
