@@ -33,6 +33,10 @@
 			Enables dependencies for the "devicemapper" graph driver, including
 			necessary kernel flags.
 		</flag>
+		<flag name="overlay">
+			Enables dependencies for the "overlay" graph driver, including
+			necessary kernel flags.
+		</flag>
 		<flag name="lxc">
 			Enables dependencies for the "lxc" execution driver.
 		</flag>
