@@ -3,7 +3,7 @@ DEPEND=>=dev-db/sqlite-3.7.9:3 device-mapper? ( >=sys-fs/lvm2-2.02.89[thin] ) >=
 DESCRIPTION=Docker complements kernel namespacing with a high-level API which operates at the process level
 EAPI=5
 HOMEPAGE=https://www.docker.com
-IUSE=aufs btrfs +contrib +device-mapper doc lxc vim-syntax zsh-completion
+IUSE=aufs btrfs +contrib +device-mapper doc lxc overlay vim-syntax zsh-completion
 KEYWORDS=~amd64
 LICENSE=Apache-2.0
 RDEPEND=>=dev-db/sqlite-3.7.9:3 device-mapper? ( >=sys-fs/lvm2-2.02.89[thin] ) !app-emulation/docker-bin >=net-firewall/iptables-1.4 sys-process/procps >=dev-vcs/git-1.7 >=app-arch/xz-utils-4.9 lxc? ( >=app-emulation/lxc-1.0.7 ) aufs? ( || ( sys-fs/aufs3 sys-kernel/aufs-sources ) )
@@ -11,4 +11,4 @@ RESTRICT=installsources strip
 SLOT=0
 SRC_URI=https://github.com/docker/docker/archive/v1.5.0.tar.gz -> docker-1.5.0.tar.gz
 _eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	eutils	998e5931fb95b10a6a11ec796ada2759	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	udev	da001465a2e939c93f7ae16947ce3438	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=513a3804fc06bca1d3ae865c5ad418eb
+_md5_=0414f79899f5d6ca45a47df376f2c80d
